<resources>
    <string name="app_name">五子棋</string>
    <string name="app_subtitle">原木棋盘 · 墨绿对弈</string>
    <string name="mode_desc_robot">25 种算法 × 5 档难度</string>
    <string name="mode_desc_person">同屏轮流落子</string>
    <string name="mode_desc_lan">连接同一 WiFi 的玩家</string>
    <string name="mode_desc_bt">连接附近的蓝牙设备玩家</string>
    <string name="scan">局域网联机扫描</string>
    <string name="bt_scan">蓝牙联机扫描</string>
    <string name="bt_scan_hint">搜索已配对或附近的蓝牙设备</string>
    <!-- 本机蓝牙身份（对方会在他的列表里看到这个名字，用于对号） -->
    <string name="bt_self_name">本机：%1$s</string>
    <string name="bt_self_name_mac">本机：%1$s（%2$s）</string>
    <string name="bt_name_unknown">未命名设备</string>
    <string name="label_ip">IP地址</string>
    <string name="label_mac">MAC地址</string>
    <string name="new_game">人机对战</string>
    <string name="fight">两人对战</string>
    <string name="fight_connection">联网对战</string>
    <string name="fight_bluetooth">蓝牙对战</string>
    <string name="agree">同意</string>
    <string name="reject">拒绝</string>
    <string name="fight_request">请求和你对战</string>
    <string name="connections">联机</string>
    <string name="black">黑方</string>
    <string name="white">白方</string>
    <string name="restart">新开</string>
    <string name="rollback">悔棋</string>
    <string name="about">关于</string>
    <string name="equal">求和</string>
    <string name="fail">认输</string>
    <string name="myself">自己</string>
    <string name="challenger">对手</string>
    <string name="computer">电脑</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="scan_hint">搜索连接同一 WiFi 的玩家</string>
    <string name="game_player">玩家</string>
    <string name="ai_level_novice">入门</string>
    <string name="ai_level_easy">简单</string>
    <string name="ai_level_medium">中等</string>
    <string name="ai_level_hard">困难</string>
    <string name="ai_level_master">大师</string>
    <!-- 对手设置（算法 + 难度） -->
    <string name="ai_select_title">对手设置</string>
    <string name="algorithm">算法</string>
    <string name="difficulty">难度</string>
    <string name="algorithm_difficulty_format">算法：%1$s · 难度：%2$s</string>
    <string name="ai_family_search">搜索类</string>
    <string name="ai_family_threat">威胁搜索</string>
    <string name="ai_family_evaluation">评估类</string>
    <string name="ai_family_simulation">随机模拟</string>
    <string name="ai_family_learning">学习类</string>
    <string name="ai_family_misc">其他</string>
    <string name="ai_algo_minimax">极小极大</string>
    <string name="ai_algo_alpha_beta">Alpha-Beta 剪枝</string>
    <string name="ai_algo_pvs">主要变例搜索</string>
    <string name="ai_algo_mtd_f">MTD(f) 零窗口迭代</string>
    <string name="ai_algo_iterative_deepening">迭代加深</string>
    <string name="ai_algo_transposition_table">置换表</string>
    <string name="ai_algo_killer_history">杀手/历史启发</string>
    <string name="ai_algo_vcf">连续冲四（VCF）</string>
    <string name="ai_algo_vct">连续威胁（VCT）</string>
    <string name="ai_algo_kill_search">算杀</string>
    <string name="ai_algo_shape_score">棋型评分（经典）</string>
    <string name="ai_algo_pattern_table">模式匹配</string>
    <string name="ai_algo_neural_eval">神经网络评估</string>
    <string name="ai_algo_mcts">蒙特卡洛树搜索</string>
    <string name="ai_algo_uct">信心上界树（UCT）</string>
    <string name="ai_algo_rave">快速行动值估计（RAVE）</string>
    <string name="ai_algo_td_learning">TD 学习</string>
    <string name="ai_algo_q_learning">Q 学习（强化学习）</string>
    <string name="ai_algo_alpha_zero">AlphaZero</string>
    <string name="ai_algo_genetic">遗传算法</string>
    <string name="ai_algo_greedy">贪心</string>
    <string name="ai_algo_fuzzy">模糊推理</string>
    <string name="ai_algo_expert_system">专家系统</string>
    <string name="ai_algo_ant_colony">蚁群算法</string>
    <string name="ai_algo_simulated_annealing">模拟退火</string>
    <!-- 对话框与提示文案 -->
    <string name="about_message">欢迎访问源代码\nhttps://github.com/lany192/FiveChess</string>
    <string name="dialog_chat_title">对话</string>
    <string name="msg_black_win">黑方胜！</string>
    <string name="msg_white_win">白方胜！</string>
    <string name="msg_connecting">建立连接中，请稍后</string>
    <string name="msg_i_won">恭喜你！你赢了！</string>
    <string name="msg_i_lost">很遗憾！你输了！</string>
    <string name="msg_rollback_ask">是否同意对方悔棋</string>
    <string name="msg_wait_peer">等待 %1$s 回应，请稍后…</string>
    <string name="msg_connect_failed">建立网络失败，请重试</string>
    <string name="msg_wifi_check">请检查 WiFi 连接后重试</string>
    <string name="msg_bt_check">请先开启蓝牙后重试</string>
    <string name="msg_bt_permission">需要蓝牙权限才能联机</string>
    <string name="msg_bt_unavailable">本机不支持蓝牙</string>
    <string name="msg_bt_wait_peer">等待对方回应，请稍后…</string>
    <string name="msg_draw_ask">对方请求和棋，是否同意？</string>
    <string name="msg_draw_end">双方和棋</string>
    <string name="msg_resign_confirm">确定要认输吗？本方判负</string>
    <!-- 联机提示（原硬编码文案收敛到资源，见 DEMAND §12.6） -->
    <string name="msg_scanning">扫描中，请稍后......</string>
    <string name="msg_peer_no_response">对方无响应，请稍后再试</string>
    <string name="msg_bt_peer_no_response">对方无响应，请确认对方已进入蓝牙联机页面</string>
    <string name="msg_request_rejected">对方拒绝了你的请求</string>
    <string name="msg_peer_exited">对方已退出</string>
    <string name="msg_peer_disconnected">对方已断开连接</string>
    <string name="msg_connect_retry_failed">建立连接失败,请重试</string>
    <string name="msg_rollback_agreed">对方同意悔棋</string>
    <string name="msg_peer_restarted">对方已重新开始</string>
    <string name="msg_draw_rejected">对方拒绝求和</string>
    <string name="msg_draw_request_sent">已发送求和请求</string>
    <string name="err_socket_null">网络套接字未就绪</string>
    <string name="err_local_ip_failed">本机IP获取失败</string>
    <string name="err_udp_ip_invalid">目标地址无效</string>
    <string name="err_udp_data_send">数据发送失败</string>
    <string name="err_multicast_unavailable">组播不可用</string>
    <string name="err_bt_disabled">蓝牙未开启，请先打开蓝牙</string>
    <string name="err_bt_permission">缺少蓝牙权限，请授权后重试</string>
    <string name="err_bt_connect_failed">蓝牙连接失败，请确认双方已配对并都在联机页面</string>
    <string name="chat_hint">输入消息</string>
    <string name="send">发送</string>
    <!-- 每步 3 分钟倒计时 -->
    <string name="msg_black_timeout">黑方超时判负，白方胜！</string>
    <string name="msg_white_timeout">白方超时判负，黑方胜！</string>
    <string name="msg_peer_timeout">对方超时判负，你赢了！</string>
    <string name="msg_self_timeout">你超时判负，很遗憾！</string>
    <string name="countdown_idle">--:--</string>
</resources>